--- a/flask_project/Pipfile
+++ b/flask_project/Pipfile
@@ -9,6 +9,7 @@ flask-sqlalchemy = "*"
 flask-migrate = "*"
 psycopg = {extras = ["binary", "pool"], version = "*"}
 python-dotenv = "*"
+supabase = "*"
 
 [dev-packages]
 
