--- a/flask_project/Pipfile
+++ b/flask_project/Pipfile
@@ -7,9 +7,10 @@ name = "pypi"
 flask = "*"
 flask-sqlalchemy = "*"
 flask-migrate = "*"
+flask-cors = "*"
 psycopg = {extras = ["binary", "pool"], version = "*"}
 python-dotenv = "*"
-supabase = "*"
+flask-jwt-extended = "*"
 
 [dev-packages]
 
